--- a/resources/assets/sass/components/_nav.scss
+++ b/resources/assets/sass/components/_nav.scss
@@ -141,19 +141,20 @@ nav.main {
     }
 }
 
-@media (max-width:1160px) {
+@media (max-width:1240px) {
     nav.main .brand,
     nav.main ul.main-nav { padding: 0 15px !important; }
 	nav.main ul.main-nav > li {
 		margin: 0 5px;
 	}
+
+    nav.main ul.main-nav > li > a { font-size: 14px;}
 }
 
 @media (max-width:1050px) {
     nav.main ul.main-nav { padding: 0 5px !important; }
     nav.main .search { padding: 0 15px; }
     nav.main .search svg { margin-right: 5px; }
-    nav.main ul.main-nav > li > a { font-size: 14px;}
 }
 
 @media (max-width:960px) {
