--- a/resources/assets/sass/core/_settings.scss
+++ b/resources/assets/sass/core/_settings.scss
@@ -9,6 +9,11 @@ $color__light_gray:     #aeaeae;
 $color__lighter_gray:   #dee0df;
 $color__teal:           #27b4a8;
 
+// Social Colors //
+
+$color-facebook: #3b5998;
+$color-twitter: #1da1f2;
+
 // Fonts //
 
 $font:         'Source Sans Pro', sans-serif;
